--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Goodmanreset by itsselvam</title>
+    <title>Goodman CSS Reset by itsselvam</title>
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/itsselvam/GoodmanReset">View on GitHub</a>
+    <a id="forkme_banner" href="https://github.com/itsselvam/GoodmanCSSReset">View on GitHub</a>
     <div class="shell">
 
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>Goodmanreset</h1>
+            <h1>Goodman CSS Reset</h1>
             <h2>CSS reset</h2>
           </span>
           <span class="left-tail"></span>
@@ -37,7 +37,7 @@
 
       <section id="downloads">
         <span class="inner">
-          <a href="https://github.com/itsselvam/GoodmanReset/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/itsselvam/GoodmanReset/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+          <a href="https://github.com/itsselvam/GoodmanCSSReset/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/itsselvam/GoodmanCSSReset/tarball/master" class="tgz"><em>download</em> .TGZ</a>
         </span>
       </section>
 
@@ -75,7 +75,7 @@
       <footer>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/itsselvam">itsselvam</a> can be found on <a href="https://github.com/itsselvam/GoodmanReset">GitHub</a></p>
+            <p>this project by <a href="https://github.com/itsselvam">itsselvam</a> can be found on <a href="https://github.com/itsselvam/GoodmanCSSReset">GitHub</a></p>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
